--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ preliminary_floor_plan_deadline: 2024-10-17
 digital_sign_submission_deadline: 2024-11-02
 incentive_rate_deadline: 2024-10-17
 event_coordinator:
-  name: Lily Harris
-  email: Lily.Harris@austintexas.gov
-  phone: 5124044209
+  name: Kerrie DiCapua
+  email: kerrie.dicapua@austintexas.gov
+  phone: 5124044211
 utility_coordinator:
   name: Jacek Czelak
   email: jacek.czelak@austintexas.gov
