--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ catering_manager:
   email: kcraig@levyrestaurants.com
   phone: 5124044137
 it_coordinator:
-  name: Bruce Maxwell
-  email: bruce.maxwell@austintexas.gov
-  phone: 5124044087
+  name: Crystal Rivera
+  email: crystal.rivera@austintexas.gov
+  phone: 5124044027
 theme: 
 remote_theme: cityofaustin/jekyll-theme-kocurek@v1.0
 searchable: true
